# stickybeak

./: .codecov.yml  .coveragerc  .dockerignore  .env  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  Procfile  README.rst  __env_ci.py  docker-compose-dev.yml  docker-compose.yml  env_ci.py  env_comm.py  env_local.py  isort.cfg  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: test.yml  test.yml.templ
docker/: Dockerfile  README.md
docker/motd/: CREDITS  motd
docker/sshd/: setup.sh
docker_comm/debug/: setup.sh
docker_comm/supervisor/: supervisord.conf
stickybeak/: __init__.py  django_view.py  flask_view.py  handle_requests.py  injector.py  logger.py  sandbox.py  server.py  utils.py
stickybeak/_priv/: handle_requests.py  injector.py  server.py  utils.py
stickybeak/_priv/pip/: __init__.py  __main__.py
stickybeak/_priv/pip/_internal/: __init__.py  build_env.py  cache.py  configuration.py  exceptions.py  locations.py  main.py  pyproject.py  self_outdated_check.py  wheel_builder.py
stickybeak/_priv/pip/_internal/cli/: autocompletion.py  base_command.py  cmdoptions.py  command_context.py  main.py  main_parser.py  parser.py  progress_bars.py  req_command.py  spinners.py
stickybeak/_priv/pip/_internal/commands/: __init__.py  cache.py  check.py  completion.py  configuration.py  debug.py  download.py  freeze.py  hash.py  help.py  install.py  list.py  search.py  show.py  uninstall.py  wheel.py
stickybeak/_priv/pip/_internal/distributions/: __init__.py  base.py  installed.py  sdist.py  wheel.py
stickybeak/_priv/pip/_internal/index/: collector.py  package_finder.py
stickybeak/_priv/pip/_internal/models/: candidate.py  direct_url.py  format_control.py  index.py  link.py  search_scope.py  selection_prefs.py  target_python.py  wheel.py
stickybeak/_priv/pip/_internal/network/: auth.py  cache.py  download.py  lazy_wheel.py  session.py  utils.py  xmlrpc.py
stickybeak/_priv/pip/_internal/operations/: check.py  freeze.py  prepare.py
stickybeak/_priv/pip/_internal/operations/install/: editable_legacy.py  legacy.py  wheel.py
stickybeak/_priv/pip/_internal/req/: __init__.py  constructors.py  req_file.py  req_install.py  req_set.py  req_tracker.py  req_uninstall.py
stickybeak/_priv/pip/_internal/resolution/: base.py
stickybeak/_priv/pip/_internal/resolution/legacy/: resolver.py
stickybeak/_priv/pip/_internal/resolution/resolvelib/: base.py  candidates.py  factory.py  provider.py  requirements.py  resolver.py
stickybeak/_priv/pip/_internal/utils/: appdirs.py  compat.py  compatibility_tags.py  deprecation.py  direct_url_helpers.py  distutils_args.py  encoding.py  entrypoints.py  filesystem.py  filetypes.py  glibc.py  hashes.py  inject_securetransport.py  logging.py  misc.py  packaging.py  parallel.py  pkg_resources.py  setuptools_build.py  subprocess.py  temp_dir.py  typing.py  unpacking.py  urls.py  virtualenv.py  wheel.py
stickybeak/_priv/pip/_internal/vcs/: __init__.py  bazaar.py  git.py  mercurial.py  subversion.py  versioncontrol.py
stickybeak/_priv/pip/_vendor/: distro.py  pyparsing.py  retrying.py
stickybeak/_priv/pip/_vendor/cachecontrol/: _cmd.py  adapter.py  compat.py  controller.py  serialize.py
stickybeak/_priv/pip/_vendor/cachecontrol/caches/: redis_cache.py
stickybeak/_priv/pip/_vendor/certifi/: __main__.py  core.py
stickybeak/_priv/pip/_vendor/chardet/: universaldetector.py
stickybeak/_priv/pip/_vendor/chardet/cli/: chardetect.py
stickybeak/_priv/pip/_vendor/distlib/: __init__.py  database.py  locators.py  manifest.py  resources.py  scripts.py  wheel.py
stickybeak/_priv/pip/_vendor/html5lib/: __init__.py  _inputstream.py  _tokenizer.py  _utils.py  html5parser.py  serializer.py
stickybeak/_priv/pip/_vendor/html5lib/_trie/: py.py
stickybeak/_priv/pip/_vendor/html5lib/filters/: lint.py  sanitizer.py
stickybeak/_priv/pip/_vendor/html5lib/treeadapters/: __init__.py
stickybeak/_priv/pip/_vendor/html5lib/treebuilders/: base.py  etree.py  etree_lxml.py
stickybeak/_priv/pip/_vendor/html5lib/treewalkers/: etree.py  etree_lxml.py
stickybeak/_priv/pip/_vendor/packaging/: _typing.py  markers.py  requirements.py  tags.py
stickybeak/_priv/pip/_vendor/pep517/: build.py  check.py  envbuild.py
stickybeak/_priv/pip/_vendor/pkg_resources/: __init__.py  py31compat.py
stickybeak/_priv/pip/_vendor/requests/: __init__.py  adapters.py  certs.py  compat.py  exceptions.py  help.py  models.py  packages.py
stickybeak/_priv/pip/_vendor/toml/: __init__.py  decoder.py  encoder.py  ordered.py
stickybeak/_priv/pip/_vendor/urllib3/contrib/: appengine.py  pyopenssl.py
stickybeak/_priv/pip/_vendor/urllib3/util/: ssl_.py  url.py
stickybeak/dj/: urls.py  views.py
tests/: .coveragerc  conftest.py  django_settings.py  env_comm.py  env_test.py  facade.py  pytest.ini  test.py  test_all.py  test_e2e.py  test_local.py  utils.py
tests/django_srv/: Dockerfile  Pipfile  manage.py
tests/django_srv/app/: apps.py
tests/django_srv/app/migrations/: 0001_initial.py
tests/django_srv/django_srv/: settings.py  urls.py  wsgi.py
tests/django_srv/docker/: Dockerfile  README.md
tests/django_srv/docker/motd/: .bashrc  motd
tests/django_srv/flesh/: Pipfile  manage.py
tests/django_srv/flesh/app/: models.py
tests/django_srv/flesh/django_srv/: settings.py  urls.py
tests/flask_srv/: Dockerfile  Pipfile  README.md  app.py
tests/flask_srv/docker/: Dockerfile
tests/flask_srv/docker/motd/: motd
tests/flask_srv/flesh/: app.py
tests/test_srvs/app_srv/: app.py  pyproject.toml
tests/test_srvs/django_srv/: .env  .envrc  Pipfile  manage.py  pyproject.toml
tests/test_srvs/django_srv/app/migrations/: 0001_initial.py
tests/test_srvs/django_srv/django_srv/: settings.py  urls.py  wsgi.py
tests/test_srvs/flask_srv/: .envrc  Pipfile  app.py  pyproject.toml
