[tool.poetry]
name = "stickybeak"
version = "0.5.6"
description = "Package that makes e2e tests easy."
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython"
]
homepage = "https://github.com/dkrystki/stickybeak"

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
requests = "^2.24.0"
virtualenv = "^20.0.31"
django = "*"
rich = "^9.12.4"
dill = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
flake8 = "^3.8.3"
mypy = "0.770"
flake8-import-order = "^0.18.1"
isort = "^5.3.2"
black = "^19.10b0"
toml = "^0.10.1"
furl = "^2.1.0"
envo = "0.9.4.16b"
pytest-rerunfailures = "^9.1.1"
pytest-lazy-fixture = "^0.6.3"
humanize = "3.5.0"

[tool.black]
skip_gitignore = "True"
target-version = ['py38']
line-length = 120
exclude = '''
(
    \.venv
    | stickybeak/_priv/pip
)
'''


[tool.isort]
profile = "black"
indent = '    '
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_gitignore = "True"
include_trailing_comma = "True"
force_sort_within_sections = "True"
forced_separate = "True"
line_length = 120
skip = [".venv", "stickybeak/_priv/pip"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

