[tool.poetry]
name = "stickybeak"
version = "0.6.1"
description = "package that makes e2e tests easy."
authors = ["damian krystkiewicz <damian.krystkiewicz@gmail.com>"]
classifiers = [
    "development status :: 4 - beta",
    "intended audience :: developers",
    "operating system :: posix :: linux",
    "programming language :: python :: 3 :: only",
    "programming language :: python :: 3.7",
    "programming language :: python :: implementation :: cpython"
]
homepage = "https://github.com/dkrystki/stickybeak"

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
requests = "^2.24.0"
virtualenv = "^20.0.31"
django = "*"
dill = "^0.3.3"
rhei = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
flake8 = "^3.8.3"
mypy = "0.770"
flake8-import-order = "^0.18.1"
isort = "^5.3.2"
black = "^19.10b0"
toml = "^0.10.1"
furl = "^2.1.0"
envo = "0.9.4.16b"
pytest-rerunfailures = "^9.1.1"
pytest-lazy-fixture = "^0.6.3"
humanize = "3.5.0"
rhei = "^0.5.2"

[tool.black]
skip_gitignore = "true"
target-version = ['py38']
line-length = 120
exclude = '''
(
    \.venv
    | stickybeak/_priv/pip
)
'''


[tool.isort]
profile = "black"
indent = '    '
known_django = "django"
sections = "future,stdlib,django,thirdparty,firstparty,localfolder"
skip_gitignore = "true"
include_trailing_comma = "true"
force_sort_within_sections = "true"
forced_separate = "true"
line_length = 120
skip = [".venv", "stickybeak/_priv/pip"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

