[tool.poetry]
name = "stickybeak"
version = "0.7.8"
description = "Package that makes e2e tests easy."
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython"
]
homepage = "https://github.com/reloadware/stickybeak"

[tool.poetry.dependencies]
dataclasses = { version = ">=0.7,<0.9", python = "~3.6" }
python = ">=3.6.2, <4.0"
requests = "*"
virtualenv = "*"
dill = "*"
typing-extensions = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
flake8 = "^3.8.3"
mypy = "^0"
flake8-import-order = "^0.18.1"
isort = "*"
black = "*"
toml = "^0.10.1"
furl = "^2.1.0"
pytest-rerunfailures = "^9.1.1"
pytest-lazy-fixture = "^0.6.3"
humanize = "3.5.0"
rhei = "^0.5.2"
Jinja2 = "^3.0.1"
django-stubs = "^1.8.0"
types-requests = "^2.25.0"
pytest-xdist = "^2.3.0"

[tool.black]
skip_gitignore = "True"
target-version = ['py38']
line-length = 120
exclude = '''
(
    \.venv
    | stickybeak/vendored
)
'''


[tool.isort]
profile = "black"
indent = '    '
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_gitignore = "True"
include_trailing_comma = "True"
force_sort_within_sections = "True"
forced_separate = "True"
line_length = 120
skip = [".venv", "stickybeak/vendored"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

