# Type of python distribution
[bdist_wheel]
universal=0

[metadata]
name = stickybeak
author = Damien Krystkiewicz
author_email = damian.krystkiewicz@gmail.com
summary = Package that makes e2e tests easy.
license = Apache 2.0
description-file = README.rst
home-page = https://github.com/dkrystki/stickybeak
python_requires = >=3.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
[options]
packages = find:

[entry_points]
console_scripts =
    automabot = stickybeak.__main__:main

[isort]
not_skip=__init__.py
indent='    '
multi_line_output=5
known_django=django
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip=migrations
include_trailing_comma=True
force_sort_within_sections=True
forced_separate=True
