[tool.poetry]
name = "flask_srv"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2, <4.0"
requests = "^2.25.1"
dataclasses = { version = ">=0.7,<0.9", python = "~3.6" }
dill = "^0.3.4"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
