[tool.poetry]
name = "flask_srv"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
dataclasses = { version = ">=0.7,<0.9", python = "~3.6" }
python = ">=3.7, <4.0"
flask = "^1.1.2"
loguru = "^0.5.1"
rhei = "0.5.2"
rich = "^9.12.4"
dill = "^0.3.3"
humanize = "3.5.0"
requests = "^2.25.1"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
